# ChangeLog for dev-ruby/combustion
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/combustion/ChangeLog,v 1.3 2015/03/03 18:24:34 mrueg Exp $

*combustion-0.5.3 (03 Mar 2015)

  03 Mar 2015; Manuel Rüger <mrueg@gentoo.org> +combustion-0.5.3.ebuild:
  Version bump.

*combustion-0.5.2 (18 Jul 2014)

  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> +combustion-0.5.2.ebuild:
  Version bump.

*combustion-0.5.1 (02 Apr 2014)

  02 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +combustion-0.5.1.ebuild,
  +metadata.xml:
  Initial version. Original ebuild by Hans de Graaff.