@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST trollop-1.16.2.gem 22016 SHA256 8f96479851ce7c5b6c33dcce2ed13d34e5786f2b22bde4e680c608de40ba393b SHA512 ad99aa2c0c3b9a8ce7fe0e3f5fc1ab6f600dda5229cb5a15cdf2a3dcc6ffadb8e386a695eebc07b86742c7d62a99794e57e86263a6e03f3bd5f883ad9fe1959e WHIRLPOOL b6144aa7f9ab2ec62e4f7d01681d0c04445a5a45749abef6d07502ff37bdf9a93b46acaf31936e9cc2d0eaa236723f8685a99f41077235d649a6a49698410dbf
 DIST trollop-2.0.gem 22528 SHA256 1f3eed108cf6dbceedf5a548b07ae788dc57893333a06b7aaab2a8d3d599e547 SHA512 325a58ffb1dae96a51497e671b3237e4ae15b46837a74f787f27e5419bf76e9870de407fe0004b6cf489f038cea44e7feed3a83e92f89d68587436c59fb62da0 WHIRLPOOL 9a2527fb42282724f997a7d9527daf89852bedc464e5f6aac614b6fed61abab0df82976cc254458527839ae697c2372e7978b22326bcfe8728e62d068d8d9cc9
+DIST trollop-2.1.1.gem 26112 SHA256 93c4a076c1c9afecfd544962e8a4869cf8efe0315d6a1869be1273fa0edcad7c SHA512 fe7932c73cad31fd0be9d5c0b8be7e026bd2f233282243cf381cbcfb72a20da4e451cc93f84c2ad0c524536228a255909b431265487ef72c0fcc2bb1f36ca2e5 WHIRLPOOL 475c60688a7ad1ab1c372a50b301a78585806702d176f124c191016c008bbba3cdc3314d1cbaf9b49744dc7ff0ef7abb443d3562edf55278e75c06f42025e45f
 EBUILD trollop-1.16.2-r4.ebuild 715 SHA256 9af946ca2a61cd8eb2bac020e58b7191fbbe295210fc724302235fc2e140740e SHA512 0482b77c79f573ef9324b5d472591b0f91826fabd31c307cf97afa99b82d742b884a878e3c36e21dd2cd47f52389575944139d841179ce783d18cbc42f7bc131 WHIRLPOOL b12c376870880a53a8f1a0ca279dc5d37a9fc6162905d5c6b22af0deaa449a816d9d7f8079f56ba1039ce84e44661104bf29cedb731497923c610451b37e6b3c
 EBUILD trollop-2.0.ebuild 709 SHA256 b753b7791052ca55f461c8d59af9df9a645f2bc0ab4c6d9e5a0004bd9ee29396 SHA512 58fcf835aaa5ddf90b424d71a2ec621758da282a0c46fa2295277b3d445a202b2af642ff2ba2286dbae89a0372d1dc06a431bb83bc19682a3de51a5f7fff9fc2 WHIRLPOOL 61e68dae3f36a3727882e3be22d92caf0d4c685beace8f64525da2236d80cafa6be3618abd697fd0c46d0d6f9fe43499bb94cecc0933cded9d5580682696a754
-MISC ChangeLog 3432 SHA256 2f01ccfda6e28bb8a846d7729da1cae1f16caa1c0fae40e0bd698c44a4ef2ea7 SHA512 a820a2492399da3dba3ca6324dc6eb4d0bb8fe1c86d14282e16a7793ad7e26e38a841c571dfdf75255074b0b09ad0603492d197e999e4164aa4af451c015c14e WHIRLPOOL 4020fd86183b51c3232dbad53e6e59375c787567a548539c9a2e50cfe0800787209b70bb7c1b5d438e50b9138dfc5941eb4ded1ff64e8d1bf56dc877ddb093d0
+EBUILD trollop-2.1.1.ebuild 667 SHA256 cc6c9c7367f5fa148f68109f522186050ffdcbe8f01f680625bad56a701a2a3d SHA512 57e022023e7c12cee45fe0094d348688186a0c5b7f26216a1579ce6faa58e9ba983087d085fe42579c9e613f673e6d186f4ea5a5d44002cb75d692d43ecd1084 WHIRLPOOL c3b3e63ed58097e6d40ef47a881a2b25425d3a5846526443ae337c20df7f340e7918c7caabca05f9d1d072d10faee0b1fbb4e4dd40320484f3da59f284e223b4
+MISC ChangeLog 3648 SHA256 34e2bfd7f95222b696fc9454629fd409c4fe4ec74b6e9b1dd7ae381008f88f7b SHA512 3a67e23a4e87cacf236e967e968802c116f5ddb00c4a9ce618a0647fe65c9eaf294400904116b6b97cda04f7ba8dd82666bc75472983732e9cf3a04c929a0dcf WHIRLPOOL 3e16bedf24930d05ebd0840afeb2a11f51f078a53722ad05f192a1f671fbce2e2901a3b8f7b72d9371276137786c6b0fa45713167fc8c33e9e6121778c790d4b
 MISC metadata.xml 161 SHA256 b90b035f3f0753799210691f4f9803511870b15be46c62a57ebc09eb629eb3f5 SHA512 7b271d31bc6075ae0591258d2c5b97592a82cc6163942b82fbdc627173dcb01320e1c4a63b11a4f25c2a8ab8eefe3f6b76a3c026af0d8d290abacf9d2f796c74 WHIRLPOOL bb95ca06bb9f92684c8c6ce2588660ad5735e634aad3de3e955fb7dc0c8eb81909544033ea0c6ababb8618c2702963c24fc35fbdbeae45d488c1f06c78eaa2c9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlT+j0UACgkQiIP6VqMIqNe8CAD/QGgXcfBfb4jbhVhNgqTwrulH
+CIZhwsemAPJTYIitxfABAI4pJFHai+v7ar/VrguzMNJWi5eQcIUNTSYxP3CsVkSf
+=fP8s
+-----END PGP SIGNATURE-----
