@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/combustion
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/combustion/ChangeLog,v 1.3 2015/03/03 18:24:34 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/combustion/ChangeLog,v 1.4 2015/03/10 06:30:58 graaff Exp $
+
+  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> -combustion-0.5.1.ebuild,
+  -combustion-0.5.2.ebuild:
+  Cleanup.
 
 *combustion-0.5.3 (03 Mar 2015)
 
